create home page and enter the conter plus design

--- a/src/style.css
+++ b/src/style.css
@@ -49,3 +49,11 @@ body {
   padding: 50px;
   text-align: center;
 }
+
+/* media queries */
+
+@media screen and (max-width: 768px) {
+  #app {
+    padding: 20px;
+  }
+}
