--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ body {
   width: 100vw;
   max-width: 100vw;
   max-height: 100vh;
-  background-color: blueviolet;
+  background-color: #8a2ce2;
   color: white;
   padding: 0;
   overflow: hidden;
