--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,20 @@ body {
   padding: 0;
   overflow: hidden;
 }
-
+::-webkit-scrollbar {
+  background-color: white;
+  width: 7px;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  max-width: 7px;
+  background-color: #8a2ce2;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+  width: 7px;
+}
 #app {
   max-width: 100vw;
   margin: 0 auto;
@@ -51,9 +64,16 @@ body {
 }
 
 /* media queries */
-
 @media screen and (max-width: 768px) {
   #app {
     padding: 20px;
+  }
+  body {
+    overflow-y: auto;
+  }
+}
+@media screen and (max-height: 600px) {
+  body {
+    overflow-y: auto;
   }
 }
