--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,9 +1,42 @@
 .headerBox {
   width: calc(100vw - 100px);
 }
+.tsapp {
+  max-width: 50px;
+  max-height: 50px;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: transparent;
+}
 .logo {
   max-width: 50px;
   max-height: 50px;
+  margin-left: 25px;
+}
+.link {
+  opacity: 0.8;
+  transition: all 0.5s ease-in-out;
+}
+.link:hover {
+  opacity: 1;
+  color: yellow;
+}
+.logo_container {
+  display: flex;
+  position: relative;
+  padding: 0;
+  padding-top: 20px;
+}
+.singleLetter {
+  -webkit-text-stroke: 2px yellow;
+  text-stroke: 2px yellow;
+  -webkit-text-fill-color: transparent;
+  fill: transparent;
+  font-size: 20px;
+}
+.logoText {
+  position: absolute;
+  top: 30px;
 }
 .nameTitle {
   -webkit-text-stroke: 2px yellow;
@@ -52,6 +85,10 @@
   }
   .display-none-one-426 {
     display: none;
+  }
+  .btnPrepare {
+    left: 20%;
+    margin-top: 50px;
   }
 }
 
