--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -53,7 +53,7 @@
 }
 .prepareBox {
   position: relative;
-  margin-top: -50px;
+  margin-top: -100px;
 }
 .animate-single-box {
   width: 300px;
@@ -61,7 +61,7 @@
 
 .btnPrepare {
   position: absolute;
-  left: 45%;
+  left: 43%;
   right: -50%;
   transform: translateX(-50%, -50%);
   z-index: 20;
@@ -76,6 +76,9 @@
   }
   .animate-single-box {
     width: 260px;
+  }
+  .prepareBox {
+    margin-top: -50px;
   }
 }
 
