--- a/src/style.css
+++ b/src/style.css
@@ -50,23 +50,40 @@ body {
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   max-width: 7px;
-  background-color: #8a2ce2;
+  background-color: #fff;
 }
 ::-webkit-scrollbar-track {
-  background-color: white;
+  background-color: #8a2ce2;
   width: 7px;
 }
 #app {
+  display: flex;
+  min-width: 100vw;
   max-width: 100vw;
-  margin: 0 auto;
-  padding: 50px;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  justify-content: center;
+}
+.pageJoints_app {
+  width: 100vw;
+  margin: 0;
+  padding: 50px;
   padding-top: 20px;
+  overflow: auto;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.pizzaJoints_container {
+  width: 100%;
+  height: fit-content;
+  margin-top: 100px;
 }
 
 /* media queries */
 @media screen and (max-width: 780px) {
-  #app {
+  .pageJoints_app {
     padding: 20px;
     padding-top: 10px;
   }
